--- a/main.css
+++ b/main.css
@@ -4,12 +4,18 @@
     box-sizing: border-box;
 }
 
-header h1,
+header h1 {
+    font-family: 'Press Start 2P', cursive;
+    font-weight: normal;
+    font-size: 28px;
+}
+
 section h2,
 section h3,
 form button {
-    font-family: 'Bungee', cursive;
+    font-family: 'Press Start 2P', cursive;
     font-weight: normal;
+    font-size: 18px;
 }
 
 body,
@@ -19,7 +25,7 @@ textarea {
 }
 
 header {
-    padding: 16px 0;
+    padding: 18px 0;
     background-color: rgb(8, 8, 63);
     color: aliceblue;
 }
@@ -27,8 +33,8 @@ header {
 header nav li {
     display: inline;
     margin-left: 16px;
-    font-size: 18px;
-    font-family: 'Bungee', cursive;
+    font-size: 16px;
+    font-family: 'Press Start 2P', cursive;
 }
 
 header nav li a {
@@ -50,7 +56,8 @@ section .container {
 }
 
 .brands-list img {
-    height: 24px;
+    height: 180px;
+    width: 321px;
 }
 
 .brands-list li {
@@ -80,6 +87,8 @@ section p {
 
 .store-front {
     margin-right: 24px;
+    height: 427px;
+    width: 590px;
 }
 
 .social-links img {
